# dic

./: .gitignore  .gitmodules  Readme.md
src/: .gitignore  CMakeLists.txt  main.c  main.test.c  out_colors.h  print_dierrors.c  print_dierrors.h
